tests/NormalTests/paczka1/fuzzy1/21219106.err
Error in line 2: HgRHaJc S748 39,8
Error in line 8: royX2G A400 50,4
Error in line 25: IiNw A468 77,6
Error in line 29: n6kbZlv A400 -2,7
Error in line 30: 6pZcg2X6 A400 82,16
Error in line 20: n6kbZlv A400 44,3
Error in line 33: royX2G A468 -1,5
Error in line 37: n6kbZlv A400 4,6
Error in line 31: royX2G A468 23,9
